--- a/index.html
+++ b/index.html
@@ -1,14 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 
-  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+
+  <link rel="stylesheet" href="./bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
+
+  <link rel="stylesheet" href="./dist/main.css">
 </head>
+
 <body>
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque error expedita voluptate sequi laboriosam esse aperiam tempore ad, magni architecto reprehenderit aliquam totam vel quaerat, repellendus nostrum ab repellat.
+  <div class="headline">
+    <img src="./img/logo.svg" alt="" height="120">
+  </div>
+
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="container container-cta">
+    <div class="col-md-7">
+      <div class="text">
+        <p>Хотите весело провести время в кругу друзей?</p>
+        <p>Не стыдитесь матерных слов и выражений?</p>
+        <p>Считаете, что внимательней и бдительней других?</p>
+        <p>Докажите!</p>
+      </div>
+      <button class="cta-button">Оформить <img src="./img/logo.svg" alt="" height="27"></button>
+    </div>
+    <div class="col-md-5">
+      <!-- <div class="cardholder">
+        <img class="top-image left" src="./img/blyacard-51.png" alt="">
+        <img class="top-image center" src="./img/blyacard-68.png" alt="">
+        <img class="top-image right" src="./img/blyacard-11.png" alt="">
+      </div> -->
+      <img src="./img/box&card.png" class="item-box-image" alt="">
+    </div>
+  </div>
+
+  <div class="divider"></div>
+
+  <div class="container item-description">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="./img/box.png" class="item-box-image" alt="">
+      </div>
+      <div class="col-md-8">
+        <h2>Lorem ipsum dolor sit amet consectetur</h2>
+        <h4>adipisicing elit. Soluta, excepturi! Adipisci debitis esse explicabo autem accusantium</h4>
+        <button class="btn btn-default">Do smth</button>
+        <p>ipsam provident earum nisi architecto odit. Ullam molestias repudiandae</p>
+        <p>laborum sint aperiam accusantium vero!</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="divider"></div>
+
+  <div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+      <div class="col-md-4">
+        <h2><i class="fa fa-check"></i> Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+          nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <h2><i class="fa fa-envelope"></i> Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+          nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <h2><i class="fa fa-money"></i> Heading</h2>
+        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
+          euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
+          sit amet risus.</p>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
