--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>Считаете, что внимательней и бдительней других?</p>
         <p>Докажите!</p>
       </div>
-      <button class="cta-button">Оформить <img src="./img/logo.svg" alt="" height="27"></button>
+      <a class="cta-button" href="#">Оформить <img src="./img/logo.svg" alt="" height="27"></a>
     </div>
     <div class="col-md-5">
       <!-- <div class="cardholder">
@@ -45,45 +45,113 @@
   <div class="divider"></div>
 
   <div class="container item-description">
-    <div class="row">
+    <div class="row decription-holder">
       <div class="col-md-4">
         <img src="./img/box.png" class="item-box-image" alt="">
       </div>
-      <div class="col-md-8">
-        <h2>Lorem ipsum dolor sit amet consectetur</h2>
-        <h4>adipisicing elit. Soluta, excepturi! Adipisci debitis esse explicabo autem accusantium</h4>
-        <button class="btn btn-default">Do smth</button>
-        <p>ipsam provident earum nisi architecto odit. Ullam molestias repudiandae</p>
-        <p>laborum sint aperiam accusantium vero!</p>
+      <div class="col-md-6 full-height">
+        <h1>Она сломает ваш мозг !</h1>
+        <div class="text-holder">
+          <p>
+            Эта игра создана на основе психологического теста Струпа, когда человек задумывается перед ответом, читая слово. Это не так
+            уж и легко, сами убедитесь.
+          </p>
+
+          <p>
+            Но игра стала действительно интересной, когда мы добавили нецензурную брань. Обзывать грязными словами друзей в тёплой обстановке
+            весело и безопасно. Поверьте, это только укрепит дружбу.
+          </p>
+
+          <p>
+            Благодаря особенности игры, вы становитесь сообразительней и внимательней с каждой сыгранной партией. Смейтесь над ошибками
+            своих друзей вместе с ними!
+          </p>
+        </div>
+        <!-- <button class="btn btn-default">Do smth</button> -->
       </div>
     </div>
   </div>
 
   <div class="divider"></div>
 
-  <div class="container">
-    <!-- Example row of columns -->
+  <div class="huge-cta">
+    <a class="cta-button" href="#">Оформить <img src="./img/logo.svg" height="65"></a>
+  </div>
+
+  <div class="divider"></div>
+
+
+  <!-- <div class="container container-cards">
+    <div class="card-row">
+      <div class="card">
+        <span><img src="./img/ico_delusion.svg" class="icon-image"> Она сломает ваш мозг !</span>
+      </div>
+      <div class="card">
+        <span><img src="./img/ico_swear.svg" class="icon-image"> С бранью веселей !</span>
+      </div>
+      <div class="card">
+        <span><img src="./img/ico_night.svg" class="icon-image"> Тренируйте восприятие !</span>
+      </div>
+    </div>
+
+    <div class="card-row">
+      <div class="card">
+        <span><img src="./img/ico_present.svg" class="icon-image"> Отличный оригинальный подарок !</span>
+      </div>
+      <div class="card">
+        <span><img src="./img/ico_drink.svg" class="icon-image"> Сделайте вечеринку необычной !</span>
+      </div>
+    </div>
+  </div> -->
+
+  <div class="container container-cards">
     <div class="row">
-      <div class="col-md-4">
-        <h2><i class="fa fa-check"></i> Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-          nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-        </p>
+      <div class="col-md-6 col-md-offset-4">
+        <h1><img src="./img/ico_delusion.svg" width="100" class="icon-image"> Она сломает ваш мозг !</h1>
       </div>
-      <div class="col-md-4">
-        <h2><i class="fa fa-envelope"></i> Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-          nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-        </p>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-2">
+        <h1><img src="./img/ico_swear.svg" width="100" class="icon-image"> С бранью веселей !</h1>
       </div>
-      <div class="col-md-4">
-        <h2><i class="fa fa-money"></i> Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
-          euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-          sit amet risus.</p>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-4">
+        <h1><img src="./img/ico_night.svg" width="100" class="icon-image"> Тренируйте восприятие !</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h1><img src="./img/ico_present.svg" width="100" class="icon-image"> Отличный оригинальный подарок !</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-4">
+        <h1><img src="./img/ico_drink.svg" width="100" class="icon-image"> Сделайте вечеринку необычной !</h1>
       </div>
     </div>
   </div>
+
+  <!-- <div class="divider"></div> -->
+
+  <footer>
+    <div class="top">
+      Если у вас есть вопросы, шлите письма на <a href="mailto:fuck@fuck.com">fuck@fuck.com</a>
+    </div>
+    <div class="middle">
+      <a href="#" class="cta">ЗАКАЗАТЬ*</a>
+    </div>
+    <div class="bottom">
+      *вы найдёте акутальную информацию про цены и доставку в форме заказа
+    </div>
+  </footer>
+
+  <div class="social">
+
+  </div>
+
+
 </body>
 
 </html>
