--- a/index.html
+++ b/index.html
@@ -14,109 +14,112 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
 
   <link rel="stylesheet" href="./dist/main.css">
+
 </head>
 
 <body>
-  <div class="headline">
-    <img src="./img/logo.svg" class="tada animated" height="120">
-  </div>
-
-  <div class="container container-cta">
-    <div class="col-md-7">
-      <div class="text">
-        <p>Хотите весело провести время в кругу друзей?</p>
-        <p>Не стыдитесь матерных слов и выражений?</p>
-        <p>Считаете, что внимательней и бдительней других?</p>
-        <p>Докажите!</p>
-      </div>
-      <a class="cta-button" href="#">Оформить <img src="./img/logo.svg" alt="" height="27"></a>
+  <div class="container">
+    <div class="headline">
+      <img src="./img/logo.svg" class="tada animated" height="120">
     </div>
-    <div class="col-md-5">
-      <img src="./img/box&card.png" class="item-box-image" alt="">
-    </div>
-  </div>
 
-  <div class="divider"></div>
-
-  <div class="container item-description">
-    <div class="row decription-holder">
-      <div class="col-md-4">
-        <img src="./img/box.png" class="item-box-image" alt="">
+    <div class="container container-cta">
+      <div class="col-md-7">
+        <div class="text">
+          <p>Хотите весело провести время в кругу друзей?</p>
+          <p>Не стыдитесь матерных слов и выражений?</p>
+          <p>Считаете, что внимательней и бдительней других?</p>
+          <p>Докажите!</p>
+        </div>
+        <a class="cta-button" href="#">Оформить <img src="./img/logo.svg" alt="" height="27"></a>
       </div>
-      <div class="col-md-6 full-height">
-        <h1>Она сломает ваш мозг !</h1>
-        <div class="text-holder">
-          <p>
-            Эта игра создана на основе психологического теста Струпа, когда человек задумывается перед ответом, читая слово. Это не так
-            уж и легко, сами убедитесь.
-          </p>
+      <div class="col-md-5 card-image">
+        <img src="./img/box&card.png" class="item-box-image" alt="">
+      </div>
+    </div>
 
-          <p>
-            Но игра стала действительно интересной, когда мы добавили нецензурную брань. Обзывать грязными словами друзей в тёплой обстановке
-            весело и безопасно. Поверьте, это только укрепит дружбу.
-          </p>
+    <div class="divider"></div>
 
-          <p>
-            Благодаря особенности игры, вы становитесь сообразительней и внимательней с каждой сыгранной партией. Смейтесь над ошибками
-            своих друзей вместе с ними!
-          </p>
+    <div class="container item-description">
+      <div class="row decription-holder">
+        <div class="col-md-4">
+          <img src="./img/box.png" class="item-box-image" alt="">
+        </div>
+        <div class="col-md-6 full-height">
+          <h1>Она сломает ваш мозг !</h1>
+          <div class="text-holder">
+            <p>
+              Эта игра создана на основе психологического теста Струпа, когда человек задумывается перед ответом, читая слово. Это не так
+              уж и легко, сами убедитесь.
+            </p>
+
+            <p>
+              Но игра стала действительно интересной, когда мы добавили нецензурную брань. Обзывать грязными словами друзей в тёплой обстановке
+              весело и безопасно. Поверьте, это только укрепит дружбу.
+            </p>
+
+            <p>
+              Благодаря особенности игры, вы становитесь сообразительней и внимательней с каждой сыгранной партией. Смейтесь над ошибками
+              своих друзей вместе с ними!
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="divider"></div>
+    <div class="divider"></div>
 
-  <div class="huge-cta">
-    <a class="cta-button wow bounce" href="#">Оформить <img src="./img/logo.svg" height="65"></a>
-  </div>
+    <div class="huge-cta">
+      <a class="cta-button wow bounce" href="#">Оформить <img src="./img/logo.svg" height="65"></a>
+    </div>
 
-  <div class="divider"></div>
+    <div class="divider"></div>
 
 
-  <div class="container container-cards">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-4 wow bounceInLeft">
-        <h1><img src="./img/ico_delusion.svg" width="100" class="icon-image"> Она сломает ваш мозг !</h1>
+    <div class="container container-cards">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-4 wow bounceInLeft">
+          <h1><img src="./img/ico_delusion.svg" width="100" class="icon-image"> Она сломает ваш мозг !</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-2 wow bounceInRight">
+          <h1><img src="./img/ico_swear.svg" width="100" class="icon-image"> С бранью веселей !</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-4 wow bounceInLeft">
+          <h1><img src="./img/ico_night.svg" width="100" class="icon-image"> Тренируйте восприятие !</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 wow bounceInRight">
+          <h1><img src="./img/ico_present.svg" width="100" class="icon-image"> Отличный оригинальный подарок !</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-4 wow bounceInLeft">
+          <h1><img src="./img/ico_drink.svg" width="100" class="icon-image"> Сделайте вечеринку необычной !</h1>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-2 wow bounceInRight">
-        <h1><img src="./img/ico_swear.svg" width="100" class="icon-image"> С бранью веселей !</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6 col-md-offset-4 wow bounceInLeft">
-        <h1><img src="./img/ico_night.svg" width="100" class="icon-image"> Тренируйте восприятие !</h1>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2 wow bounceInRight">
-        <h1><img src="./img/ico_present.svg" width="100" class="icon-image"> Отличный оригинальный подарок !</h1>
+    <footer>
+      <div class="top">
+        Если у вас есть вопросы, шлите письма на <a href="mailto:fuck@fuck.com">fuck@fuck.com</a>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-8 col-md-offset-4 wow bounceInLeft">
-        <h1><img src="./img/ico_drink.svg" width="100" class="icon-image"> Сделайте вечеринку необычной !</h1>
+      <div class="middle">
+        <a href="#" class="cta">ЗАКАЗАТЬ*</a>
       </div>
-    </div>
-  </div>
+      <div class="bottom">
+        *вы найдёте акутальную информацию про цены и доставку в форме заказа
+      </div>
+    </footer>
 
-  <footer>
-    <div class="top">
-      Если у вас есть вопросы, шлите письма на <a href="mailto:fuck@fuck.com">fuck@fuck.com</a>
-    </div>
-    <div class="middle">
-      <a href="#" class="cta">ЗАКАЗАТЬ*</a>
-    </div>
-    <div class="bottom">
-      *вы найдёте акутальную информацию про цены и доставку в форме заказа
-    </div>
-  </footer>
+    <div class="social">
 
-  <div class="social">
-
+    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
