added social icons

--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   <title>Document</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-
-  <link rel="stylesheet" href="./bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
-
+  <link rel="stylesheet" href="./css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./css/social-circles.min.css" />
   <link rel="stylesheet" href="./dist/main.css">
 
 </head>
@@ -31,7 +28,7 @@
           <p>Считаете, что внимательней и бдительней других?</p>
           <p>Докажите!</p>
         </div>
-        <a class="cta-button" href="#">Оформить <img src="./img/logo.svg" alt="" height="27"></a>
+        <a class="cta-button" href="https://goo.gl/forms/uQNTz2TmCIiS1dAr1">Оформить <img src="./img/logo.svg" alt="" height="27"></a>
       </div>
       <div class="col-md-5 card-image">
         <img src="./img/box&card.png" class="item-box-image" alt="">
@@ -49,8 +46,11 @@
           <h1>Она сломает ваш мозг !</h1>
           <div class="text-holder">
             <p>
-              Эта игра создана на основе психологического теста Струпа, когда человек задумывается перед ответом, читая слово. Это не так
-              уж и легко, сами убедитесь.
+              Эта игра создана на основе психологического
+              <a class="cta-button wow bounce" href="https://ru.wikipedia.org/wiki/%D0%AD%D1%84%D1%84%D0%B5%D0%BA%D1%82_%D0%A1%D1%82%D1%80%D1%83%D0%BF%D0%B0"
+                target='_blank'>
+                <font color="#ED1C24">теста Струпа</font>
+              </a>, когда человек задумывается перед ответом, читая слово. Это не так уж и легко, сами убедитесь.
             </p>
 
             <p>
@@ -62,6 +62,9 @@
               Благодаря особенности игры, вы становитесь сообразительней и внимательней с каждой сыгранной партией. Смейтесь над ошибками
               своих друзей вместе с ними!
             </p>
+            <p>
+              <font size="2" color="#BFC9CE">(изображения могут отличаться от окончательного продукта)</font>
+            </p>
           </div>
         </div>
       </div>
@@ -70,7 +73,7 @@
     <div class="divider"></div>
 
     <div class="huge-cta">
-      <a class="cta-button wow bounce" href="#">Оформить <img src="./img/logo.svg" height="65"></a>
+      <a class="cta-button wow bounce" href="https://goo.gl/forms/uQNTz2TmCIiS1dAr1">Оформить <img src="./img/logo.svg" height="65"></a>
     </div>
 
     <div class="divider"></div>
@@ -78,48 +81,64 @@
 
     <div class="container container-cards">
       <div class="row">
-        <div class="col-md-6 col-md-offset-4 wow bounceInLeft">
-          <h1><img src="./img/ico_delusion.svg" width="100" class="icon-image"> Она сломает ваш мозг !</h1>
+        <div class="col-md-6 col-md-offset-2 wow bounceInLeft">
+          <h1><img src="./img/ico_night.svg" width="100" class="icon-image"> Проведите досуг веселее!</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 wow bounceInRight">
+          <h1><img src="./img/ico_drink.svg" width="100" class="icon-image"> Сделайте вечеринку необычной!</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-2 wow bounceInLeft">
+          <h1><img src="./img/ico_swear.svg" width="100" class="icon-image"> Ругайтесь по-приколу!</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 col-md-offset-2 wow bounceInRight">
-          <h1><img src="./img/ico_swear.svg" width="100" class="icon-image"> С бранью веселей !</h1>
+          <h1><img src="./img/ico_delusion.svg" width="100" class="icon-image"> Тренируйте внимание!</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 col-md-offset-4 wow bounceInLeft">
-          <h1><img src="./img/ico_night.svg" width="100" class="icon-image"> Тренируйте восприятие !</h1>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 wow bounceInRight">
-          <h1><img src="./img/ico_present.svg" width="100" class="icon-image"> Отличный оригинальный подарок !</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-8 col-md-offset-4 wow bounceInLeft">
-          <h1><img src="./img/ico_drink.svg" width="100" class="icon-image"> Сделайте вечеринку необычной !</h1>
+        <div class="col-md-8 col-md-offset-2 wow bounceInLeft">
+          <h1><img src="./img/ico_present.svg" width="100" class="icon-image"> Сделайте оригинальный подарок!</h1>
         </div>
       </div>
     </div>
 
     <footer>
       <div class="top">
-        Если у вас есть вопросы, шлите письма на <a href="mailto:fuck@fuck.com">fuck@fuck.com</a>
+        Если у вас есть вопросы, шлите письма на <a href="mailto:twochairsgames@gmail.com?subject=ВОПРОС-БЛ*!">twochairsgames@gmail.com</a>
       </div>
       <div class="middle">
-        <a href="#" class="cta">ЗАКАЗАТЬ*</a>
+        <a href="https://goo.gl/forms/uQNTz2TmCIiS1dAr1" class="cta">ЗАКАЗАТЬ*</a>
       </div>
       <div class="bottom">
-        *вы найдёте акутальную информацию про цены и доставку в форме заказа
+        <center>*вы найдёте актуальную информацию про цены и доставку в форме заказа</center>
+      </div>
+
+      <div class="social">
+        <ol>
+          <li><a class="icon-facebook social-button color" href="http://facebook.com/username"></a></li>
+          <li><a class="icon-twitter social-button color" href="http://twitter.com/username"></a></li>
+          <li><a class="icon-instagram social-button color" href="http://instagram.com/username"></a></li>
+          <li><a class="icon-behance social-button color" href="http://behance.com/username"></a></li>
+          <li><a class="icon-vimeo social-button color" href="http://vimeo.com/username"></a></li>
+          <li><a class="icon-youtube social-button color" href="http://youtube.com/username"></a></li>
+          <li><a class="icon-googleplus social-button color" href="http://google.com/plus/username"></a></li>
+          <li><a class="icon-rss social-button color" href="http://yoursite.com/rss"></a></li>
+          <li><a class="icon-pinterest social-button color" href="http://pinterest.com/username"></a></li>
+          <li><a class="icon-tumblr social-button color" href="http://tumblr.com/username"></a></li>
+          <li><a class="icon-linkedin social-button color" href="http://linkedin.com/username"></a></li>
+          <li><a class="icon-skype social-button color" href="http://skype.com/username"></a></li>
+          <li><a class="icon-github social-button color" href="http://github.com/janhuenermann"></a></li>
+          <li><a class="icon-dribbble social-button color" href="http://dribbble.com/janhuenermann"></a></li>
+        </ol>
       </div>
     </footer>
 
-    <div class="social">
 
-    </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
